--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -19,8 +19,10 @@ jobs:
       run: dotnet build --no-restore
     - name: Test
       run: dotnet test --no-build --verbosity normal
+    - name: Delete the Publish Folder
+      run: rmdir publish /S /Q
     - name: Run the Publish
-      run: dotnet publish --configuration Release --no-restore --output ./publish
+      run: dotnet publish -p:PublishProfile=FolderProfile --output ./publish
     - name: Deploy to IIS
       run: |
         iisreset /stop
