--- a/src/MYRAY.Api/Properties/launchSettings.json
+++ b/src/MYRAY.Api/Properties/launchSettings.json
@@ -13,8 +13,8 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7235;http://localhost:5235",
+      "launchUrl": "",
+      "applicationUrl": "https://localhost:443;http://localhost:8080",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
