Add Authentication JWT

--- a/src/MYRAY.Api/appsettings.json
+++ b/src/MYRAY.Api/appsettings.json
@@ -5,5 +5,16 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWT" : {
+    "ValidAudience": "http://localhost:4200",
+    "ValidIssuer": "http://localhost:5000",
+    "Secret": "JWTRefreshTokenMYRAY",
+    "TokenValidityInMinutes": 1,
+    "RefreshTokenValidityInDays": 7
+  },
+  "TelnyxSMS": {
+    "Key": "KEY018154E1D912EA355ACA6D8B4CC16AE4_hO248uZKpg5X2N2OWBz6Iy",
+    "PhoneNumber": "+15802039848"
+  }
 }
