--- a/src/MYRAY.Api/MYRAY.Api.csproj
+++ b/src/MYRAY.Api/MYRAY.Api.csproj
@@ -16,12 +16,14 @@
 
     <ItemGroup>
         <PackageReference Include="FirebaseAdmin" Version="2.3.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.5" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.0.0" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="5.0.0" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.1" />
         <PackageReference Include="Swashbuckle.AspNetCore.Newtonsoft" Version="6.3.1" />
         <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
+        <PackageReference Include="Telnyx.net" Version="2.7.0" />
     </ItemGroup>
 
     <ItemGroup>
