--- a/src/MYRAY.Business/MYRAY.Business.csproj
+++ b/src/MYRAY.Business/MYRAY.Business.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
       <PackageReference Include="AutoMapper" Version="11.0.1" />
       <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.1" />
+      <PackageReference Include="Telnyx.net" Version="2.7.0" />
     </ItemGroup>
 
     <ItemGroup>
