--- a/src/MYRAY.Api/appsettings.json
+++ b/src/MYRAY.Api/appsettings.json
@@ -16,5 +16,9 @@
   "TelnyxSMS": {
     "Key": "KEY018154E1D912EA355ACA6D8B4CC16AE4_hO248uZKpg5X2N2OWBz6Iy",
     "PhoneNumber": "+15802039848"
+  },
+  "Money":{
+    "JobPost" : 3000,
+    "Point": 10
   }
 }
