--- a/src/MYRAY.Api/MYRAY.Api.csproj
+++ b/src/MYRAY.Api/MYRAY.Api.csproj
@@ -30,4 +30,8 @@
       <ProjectReference Include="..\MYRAY.Business\MYRAY.Business.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="upload" />
+    </ItemGroup>
+
 </Project>
