--- a/src/MYRAY.Api/appsettings.Development.json
+++ b/src/MYRAY.Api/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "MYRAY" : "Data Source=20.212.196.50,1433;Initial Catalog=MYRAY;User ID=sa;Password=29327Cab@456789"
+    "MYRAY" : "Data Source=20.212.196.50,1433;Initial Catalog=MYRAY;User ID=sa;Password=29327Cab@456789;MultipleActiveResultSets=True"
   }
 }
