--- a/src/MYRAY.Api/appsettings.Production.json
+++ b/src/MYRAY.Api/appsettings.Production.json
@@ -7,6 +7,6 @@
         }
     },
     "ConnectionStrings": {
-        "MYRAY" : "Data Source=localhost,1433;Initial Catalog=MYRAY;User ID=sa;Password=29327Cab@456789"
+        "MYRAY" : "Data Source=localhost,1433;Initial Catalog=MYRAY;User ID=sa;Password=29327Cab@456789;MultipleActiveResultSets=True"
     }
 }
