--- a/src/MYRAY.Api/MYRAY.Api.csproj
+++ b/src/MYRAY.Api/MYRAY.Api.csproj
@@ -24,6 +24,7 @@
         <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
         <PackageReference Include="Quartz" Version="3.4.0" />
         <PackageReference Include="Quartz.Extensions.Hosting" Version="3.4.0" />
+        <PackageReference Include="SignalRSwaggerGen" Version="3.2.1" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.1" />
         <PackageReference Include="Swashbuckle.AspNetCore.Newtonsoft" Version="6.3.1" />
         <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
