--- a/src/MYRAY.Business/MYRAY.Business.csproj
+++ b/src/MYRAY.Business/MYRAY.Business.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="AutoMapper" Version="11.0.1" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="6.0.6" />
       <PackageReference Include="Quartz" Version="3.4.0" />
       <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.1" />
       <PackageReference Include="Telnyx.net" Version="2.7.0" />
