Add Reject when approve task job

--- a/test/MYRAY.Api.IntegrationTest/MYRAY.Api.IntegrationTest.csproj
+++ b/test/MYRAY.Api.IntegrationTest/MYRAY.Api.IntegrationTest.csproj
@@ -9,6 +9,9 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Google.Apis.Core" Version="1.49.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="6.0.7" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.7" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
         <PackageReference Include="xunit" Version="2.4.1" />
         <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
@@ -22,9 +25,13 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Controller" />
-      <Folder Include="Helper" />
-      <Folder Include="Utils" />
+      <ProjectReference Include="..\..\src\MYRAY.Api\MYRAY.Api.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Update="TestData\RoleController.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
