Add Status get job farmer

--- a/test/MYRAY.Api.UnitTest/MYRAY.Api.UnitTest.csproj
+++ b/test/MYRAY.Api.UnitTest/MYRAY.Api.UnitTest.csproj
@@ -28,4 +28,8 @@
       <Folder Include="Services" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\src\MYRAY.Business\MYRAY.Business.csproj" />
+    </ItemGroup>
+
 </Project>
